Actualizado el programa
Eliminadas celdas LEGACY, parámetros ajustados, ejecución limpia.

--- a/OsciladorMixtoCuantico.ipynb
+++ b/OsciladorMixtoCuantico.ipynb
@@ -410,46 +410,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e07242a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "norm_no_acoplo_list, ex_xmix_no_acoplo_list, ex_pmix_no_acoplo_list, ex_xq_no_acoplo_list, ex_pq_no_acoplo_list = [], [], [], [], []\n",
-    "norm_con_acoplo_list, ex_xmix_con_acoplo_list, ex_pmix_con_acoplo_list, ex_xq_con_acoplo_list, ex_pq_con_acoplo_list = [], [], [], [], []\n",
-    "\n",
-    "print(\"Calculando evolución sin acoplo...\")\n",
-    "for t_val in tqdm(times):\n",
-    "    psi_t_h = joint_evolution_wrapper(psi0_joint, H_eff_sin_acoplo_default, t_val)\n",
-    "    norm_no_acoplo_list.append(np.linalg.norm(psi_t_h))\n",
-    "    ex_xmix_no_acoplo_list.append(np.real(expected_value(psi_t_h, X_mix_joint_op)))\n",
-    "    ex_pmix_no_acoplo_list.append(np.real(expected_value(psi_t_h, P_mix_joint_op)))\n",
-    "    ex_xq_no_acoplo_list.append(np.real(expected_value(psi_t_h, Xq_joint_op)))\n",
-    "    ex_pq_no_acoplo_list.append(np.real(expected_value(psi_t_h, Pq_joint_op)))\n",
-    "\n",
-    "print(f\"Calculando evolución con acoplo (epsilon = {epsilon})...\")\n",
-    "for t_val in tqdm(times):\n",
-    "    psi_t_h = joint_evolution_wrapper(psi0_joint, H_eff_con_acoplo_default, t_val)\n",
-    "    norm_con_acoplo_list.append(np.linalg.norm(psi_t_h))\n",
-    "    ex_xmix_con_acoplo_list.append(np.real(expected_value(psi_t_h, X_mix_joint_op)))\n",
-    "    ex_pmix_con_acoplo_list.append(np.real(expected_value(psi_t_h, P_mix_joint_op)))\n",
-    "    ex_xq_con_acoplo_list.append(np.real(expected_value(psi_t_h, Xq_joint_op)))\n",
-    "    ex_pq_con_acoplo_list.append(np.real(expected_value(psi_t_h, Pq_joint_op)))\n",
-    "\n",
-    "fig_exp_joint, axs = plt.subplots(3, 2, figsize=(15, 15), sharex='col')\n",
-    "axs[0,0].plot(times, ex_xmix_no_acoplo_list, label='Sin Acoplo', color = \"navy\"); axs[0,0].plot(times, ex_xmix_con_acoplo_list, label=f'Con Acoplo ($\\\\varepsilon$={epsilon})', linestyle='--', color = \"red\"); axs[0,0].set_ylabel(r'$\\langle \\hat{X}_{mix} \\rangle$'); axs[0,0].set_title(fr'Posición Mixta Esperada $(\\kappa = {kappa_default})$'); axs[0,0].legend()\n",
-    "axs[1,0].plot(times, ex_pmix_no_acoplo_list, label='Sin Acoplo', color = \"navy\"); axs[1,0].plot(times, ex_pmix_con_acoplo_list, label=f'Con Acoplo ($\\\\varepsilon$={epsilon})', linestyle='--', color = \"red\"); axs[1,0].set_ylabel(r'$\\langle \\hat{P}_{mix} \\rangle$'); axs[1,0].set_title(fr'Momento Mixta Esperado $(\\kappa = {kappa_default})$'); axs[1,0].legend()\n",
-    "axs[0,1].plot(times, ex_xq_no_acoplo_list, label='Sin Acoplo', color = \"navy\"); axs[0,1].plot(times, ex_xq_con_acoplo_list, label=f'Con Acoplo ($\\\\varepsilon$={epsilon})', linestyle='--', color = \"red\"); axs[0,1].set_ylabel(r'$\\langle \\hat{X}_Q \\rangle$'); axs[0,1].set_title('Posición Cuántica Esperada'); axs[0,1].legend()\n",
-    "axs[1,1].plot(times, ex_pq_no_acoplo_list, label='Sin Acoplo', color = \"navy\"); axs[1,1].plot(times, ex_pq_con_acoplo_list, label=f'Con Acoplo ($\\\\varepsilon$={epsilon})', linestyle='--', color = \"red\"); axs[1,1].set_ylabel(r'$\\langle \\hat{P}_Q \\rangle$'); axs[1,1].set_title('Momento Cuántico Esperado'); axs[1,1].legend()\n",
-    "axs[2,0].plot(times, norm_no_acoplo_list, label='Norma Sin Acoplo'); axs[2,0].plot(times, norm_con_acoplo_list, label=f'Norma Con Acoplo ($\\\\varepsilon$={epsilon})', linestyle='--', color = \"red\"); axs[2,0].set_ylabel(r'Norma $||\\Psi_H||$'); axs[2,0].set_xlabel('Tiempo (u.a.)'); axs[2,0].set_title('Conservación de la Norma'); axs[2,0].legend(); axs[2,0].set_ylim(0.99, 1.01)\n",
-    "axs[2,1].set_visible(False)\n",
-    "plt.tight_layout()\n",
-    "save_figure_with_timestamp(\"expectation_values_evolution\", POTENTIAL_TYPE, COUPLING_TYPE, bbox_inches='tight')\n",
-    "plt.show()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "7633a187",
    "metadata": {},
@@ -635,7 +595,7 @@
     "\n",
     "# --- Parámetros del Barrido ---\n",
     "kappa_grid_3d = np.linspace(0, 1.0, 11)\n",
-    "time_grid_3d = np.linspace(0, 4 * np.pi, 100)\n",
+    "time_grid_3d = np.linspace(0, 4 * np.pi, 200)\n",
     "epsilon_3d = 0.2\n",
     "\n",
     "# --- Definición de Observables ---\n",
@@ -735,13 +695,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Celda de Análisis: Gráfico 3D de Entrelazamiento (CORREGIDA) ---\n",
+    "# ELIMINABLE CREO\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from matplotlib import cm\n",
     "\n",
     "# --- Parámetros del Barrido ---\n",
     "kappa_grid_3d = np.linspace(0, 1.0, 15)\n",
-    "time_grid_3d = np.linspace(0, 4 * np.pi, 100)\n",
+    "time_grid_3d = np.linspace(0, 4 * np.pi, 200)\n",
     "epsilon_3d = 0.2\n",
     "\n",
     "# --- Definición de Observables ---\n",
@@ -831,7 +791,7 @@
    "source": [
     "# --- ENTRELAZAMIENTO ---\n",
     "kappa_grid_3d = np.linspace(0, 1.0, 21)\n",
-    "time_grid_3d = np.linspace(0, 4 * np.pi, 100)\n",
+    "time_grid_3d = np.linspace(0, 4 * np.pi, 200)\n",
     "epsilon_ent_3d = 0.25\n",
     "purity_grid = np.zeros((len(kappa_grid_3d), len(time_grid_3d)))\n",
     "\n",
@@ -924,7 +884,7 @@
     "# --- VALIDEZ DEL CONMUTADOR ---\n",
     "\n",
     "Nh_grid_comm = np.array([3, 4, 5, 6, 7, 8])\n",
-    "time_grid_comm = np.linspace(0, 4 * np.pi, 100)\n",
+    "time_grid_comm = np.linspace(0, 4 * np.pi, 200)\n",
     "kappa_comm_test = 1.0\n",
     "epsilon_comm_test = 0.1\n",
     "\n",
@@ -1230,23 +1190,9 @@
     "# False: Usa la proyección de la función de onda (aproximada, rápida).\n",
     "USE_PRECISE_CLASSICAL_RECONSTRUCTION = True \n",
     "\n",
-    "# --- Parámetros de Animación ---\n",
-    "kappa_anim = 1.0\n",
-    "epsilon_anim = 0.2\n",
     "times_anim = np.linspace(0, 4 * np.pi, 150)\n",
-    "\n",
-    "# --- Construir Hamiltonianos para la animación (Con y Sin Acoplo) ---\n",
-    "L_h_anim = L_h_generator(Xh_op, Ph_op, Lambda_xh_op, Lambda_ph_op, m_h, omega_h, hbar, kappa_anim, \"quartic\", 0.1)\n",
-    "H_q_op_full = np.kron(np.identity(dim_H_hybrid), H_q_op)\n",
-    "L_h_op_full = np.kron(L_h_anim, id_q)\n",
-    "\n",
-    "H_eff_anim_no_coupling = L_h_op_full + H_q_op_full\n",
-    "H_acoplo_anim = create_unified_coupling_term(Xh_op, Ph_op, Lambda_xh_op, Lambda_ph_op, X_q_op, P_q_op, hbar, kappa_anim, epsilon_anim, 'x_mix_x')\n",
-    "H_eff_anim_with_coupling = H_eff_anim_no_coupling + H_acoplo_anim\n",
-    "\n",
-    "# --- Pre-cálculo de estados evolucionados ---\n",
-    "evolved_psis_no_coupling = [joint_evolution_wrapper(psi0_joint, H_eff_anim_no_coupling, t) for t in tqdm(times_anim, desc=\"Pre-calculando Sin Acoplo\")]\n",
-    "evolved_psis_with_coupling = [joint_evolution_wrapper(psi0_joint, H_eff_anim_with_coupling, t) for t in tqdm(times_anim, desc=\"Pre-calculando Con Acoplo\")]\n",
+    "evolved_psis_no_coupling = [joint_evolution_wrapper(psi0_joint, H_eff_sin_acoplo_default, t) for t in tqdm(times_anim, desc=\"Pre-calculando Sin Acoplo\")]\n",
+    "evolved_psis_with_coupling = [joint_evolution_wrapper(psi0_joint, H_eff_con_acoplo_default, t) for t in tqdm(times_anim, desc=\"Pre-calculando Con Acoplo\")]\n",
     "\n",
     "# --- Grids y bases de funciones de onda ---\n",
     "x_range = np.linspace(-5, 5, 80)\n",
@@ -1263,7 +1209,7 @@
     "ax_pos_q_no_c = fig_anim.add_subplot(gs[0, 1])\n",
     "ax_phase_with_c = fig_anim.add_subplot(gs[1, 0], projection='3d')\n",
     "ax_pos_q_with_c = fig_anim.add_subplot(gs[1, 1])\n",
-    "fig_anim.suptitle(f'Evolución del Sistema Híbrido ($\\\\kappa={kappa_anim}$)', fontsize=18)\n",
+    "fig_anim.suptitle(f'Evolución del Sistema Híbrido ($\\\\kappa={kappa_default}$)', fontsize=18)\n",
     "\n",
     "# --- Cálculo de máximos globales para escalas de ejes ---\n",
     "max_z_phase = 0.01\n",
@@ -1287,7 +1233,7 @@
     "    \n",
     "    cases = [\n",
     "        (evolved_psis_no_coupling[frame], ax_phase_no_c, ax_pos_q_no_c, 'Sin Acoplo', 'viridis', 'magenta'),\n",
-    "        (evolved_psis_with_coupling[frame], ax_phase_with_c, ax_pos_q_with_c, f'Con Acoplo ($\\\\varepsilon={epsilon_anim}$)', 'plasma', 'cyan')\n",
+    "        (evolved_psis_with_coupling[frame], ax_phase_with_c, ax_pos_q_with_c, f'Con Acoplo ($\\\\varepsilon={epsilon}$)', 'plasma', 'cyan')\n",
     "    ]\n",
     "\n",
     "    for psi_t, ax_phase, ax_pos_q, title_prefix, cmap, q_color in cases:\n",
