Títulos de plots corregidos.
Una 'f' de cadena de formato que faltaba, algún subíndice... No afecta a los resultados.

--- a/OsciladorMixtoCuantico.ipynb
+++ b/OsciladorMixtoCuantico.ipynb
@@ -234,10 +234,10 @@
     "# --- PARÁMETROS ---\n",
     "m_h, m_q, omega_h, omega_q, hbar = 1.0, 1.0, 1.0, 1.0, 1.0\n",
     "kappa_default, epsilon, C4 = 0.5, 0.1, 0.1\n",
-    "POTENTIAL_TYPE, COUPLING_TYPE = 'harmonic', 'x_mix_p' # Harmonic/Quartic, x_mix_x/p_mix_p/x_mix2_x2/p_mix2_p2/x_mix_p\n",
-    "SAVE_FIGS = False\n",
-    "SAVE_ANIMS = False\n",
-    "N_max_h, N_max_q = 5, 5\n",
+    "POTENTIAL_TYPE, COUPLING_TYPE = 'harmonic', 'x_mix_x' # Harmonic/Quartic, x_mix_x/p_mix_p/x_mix2_x2/p_mix2_p2/x_mix_p\n",
+    "SAVE_FIGS = True\n",
+    "SAVE_ANIMS = True\n",
+    "N_max_h, N_max_q = 6, 8\n",
     "\n",
     "# --- DIMENSIONES ---\n",
     "dim_fock_h_single = N_max_h + 1\n",
@@ -424,7 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- EQUIVALENCIA DEL MODELO SIN ACOPLO (HAY QUE USAR POTENCIAL CUADRÁTICO) ---\n",
+    "# --- EQUIVALENCIA DEL MODELO SIN ACOPLO (HAY QUE USAR POTENCIAL ARMÓNICO) ---\n",
     "kappa_values_to_test = [1.0, 0.1, 0.01, 1e-4, 0.0]\n",
     "results_xmix, results_pmix = {}, {}\n",
     "\n",
@@ -553,7 +553,7 @@
     "eigenvalues_kvh = np.array(eigenvalues_kvh)\n",
     "\n",
     "fig_spec, axs_spec = plt.subplots(1, 2, figsize=(18, 7), sharey=True)\n",
-    "fig_spec.suptitle('Equivalencia (o no) del espectro Híbrido al Clásico-Cuántico para potencial {POTENTIAL_TYPE}')\n",
+    "fig_spec.suptitle(f'Equivalencia (o no) del espectro Híbrido al Clásico-Cuántico para potencial {POTENTIAL_TYPE}')\n",
     "ax_real = axs_spec[0]; ax_imag = axs_spec[1]\n",
     "\n",
     "for i in range(eigenvalues_kvh.shape[1]):\n",
@@ -691,100 +691,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2cf3eb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ELIMINABLE CREO\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "from matplotlib import cm\n",
-    "\n",
-    "# --- Parámetros del Barrido ---\n",
-    "kappa_grid_3d = np.linspace(0, 1.0, 15)\n",
-    "time_grid_3d = np.linspace(0, 4 * np.pi, 200)\n",
-    "epsilon_3d = 0.2\n",
-    "\n",
-    "# --- Definición de Observables ---\n",
-    "observables_to_plot_3d = {\n",
-    "    r'$\\langle \\hat{X}_C \\rangle$': np.kron(Xh_op, id_q),\n",
-    "    r'$\\langle \\hat{P}_C \\rangle$': np.kron(Ph_op, id_q),\n",
-    "    r'$\\langle \\hat{X}_Q \\rangle$': np.kron(np.identity(dim_H_hybrid), X_q_op),\n",
-    "    r'$\\langle \\hat{P}_Q \\rangle$': np.kron(np.identity(dim_H_hybrid), P_q_op),\n",
-    "    r'$Im(\\langle [\\hat{X}_{mix}, \\hat{P}_{mix}] \\rangle)$': None, # Placeholder\n",
-    "    r'$\\langle \\hat{X}_{mix} \\hat{X}_Q \\rangle$': None, # Placeholder\n",
-    "    r'$\\langle \\hat{X}_{mix} \\rangle$': None,\n",
-    "    r'$\\langle \\hat{P}_{mix} \\rangle$': None\n",
-    "}\n",
-    "\n",
-    "# --- Almacenamiento de Resultados ---\n",
-    "results_3d = {name: np.zeros((len(kappa_grid_3d), len(time_grid_3d))) for name in observables_to_plot_3d}\n",
-    "\n",
-    "# --- Estado Inicial ---\n",
-    "psi0_joint_3d = psi0_joint\n",
-    "# --- Bucle Principal de Cálculo ---\n",
-    "print(\"Generando superficies de valores esperados...\")\n",
-    "for i, kappa_val in enumerate(tqdm(kappa_grid_3d, desc=\"Barriendo kappa\")):\n",
-    "    \n",
-    "    # Construir Hamiltoniano y operadores dependientes de kappa\n",
-    "    L_h = L_h_generator(Xh_op, Ph_op, Lambda_xh_op, Lambda_ph_op, m_h, omega_h, hbar, kappa_val, POTENTIAL_TYPE, C4)\n",
-    "    H_acoplo = create_unified_coupling_term(Xh_op, Ph_op, Lambda_xh_op, Lambda_ph_op, X_q_op, P_q_op, hbar, kappa_val, epsilon_3d, COUPLING_TYPE)\n",
-    "    H_eff = np.kron(L_h, id_q) + np.kron(np.identity(dim_H_hybrid), H_q_op) + H_acoplo\n",
-    "    \n",
-    "    # Operadores mixtos\n",
-    "    X_mix = Xh_op - (0.5 * hbar * kappa_val * Lambda_ph_op)\n",
-    "    P_mix = Ph_op + (0.5 * hbar * kappa_val * Lambda_xh_op)\n",
-    "    \n",
-    "    # *** CORRECCIÓN CLAVE AQUÍ ***\n",
-    "    # El conmutador es un operador puramente clásico (36x36)\n",
-    "    Commutator_op_classical = (X_mix @ P_mix) - (P_mix @ X_mix)\n",
-    "    # Se promueve al espacio conjunto (216x216) usando el producto tensorial con la identidad cuántica\n",
-    "    Commutator_op_joint = np.kron(Commutator_op_classical, id_q)\n",
-    "    \n",
-    "    XmixXq_op = np.kron(X_mix, X_q_op)\n",
-    "    \n",
-    "    for j, t_val in enumerate(time_grid_3d):\n",
-    "        psi_t = joint_evolution_wrapper(psi0_joint_3d, H_eff, t_val, hbar)\n",
-    "        \n",
-    "        for name, op in observables_to_plot_3d.items():\n",
-    "            if name == r'$Im(\\langle [\\hat{X}_{mix}, \\hat{P}_{mix}] \\rangle)$':\n",
-    "                # Usar el operador conjunto para el cálculo\n",
-    "                results_3d[name][i, j] = np.imag(expected_value(psi_t, Commutator_op_joint))\n",
-    "            elif name == r'$\\langle \\hat{X}_{mix} \\hat{X}_Q \\rangle$':\n",
-    "                results_3d[name][i, j] = np.real(expected_value(psi_t, XmixXq_op))\n",
-    "            elif name == r'$\\langle \\hat{X}_{mix} \\rangle$':\n",
-    "                results_3d[name][i, j] = np.real(expected_value(psi_t, np.kron(X_mix, id_q)))\n",
-    "            elif name == r'$\\langle \\hat{P}_{mix} \\rangle$':\n",
-    "                results_3d[name][i, j] = np.real(expected_value(psi_t, np.kron(P_mix, id_q)))\n",
-    "            else:\n",
-    "                results_3d[name][i, j] = np.real(expected_value(psi_t, op))\n",
-    "\n",
-    "# --- Bucle de Ploteo y Guardado ---\n",
-    "T, K = np.meshgrid(time_grid_3d, kappa_grid_3d)\n",
-    "\n",
-    "\n",
-    "print(\"Generando y guardando gráficos 3D...\")\n",
-    "for name, data_grid in results_3d.items():\n",
-    "    fig = plt.figure(figsize=(12, 8))\n",
-    "    \n",
-    "    ax = fig.add_subplot(111, projection='3d')\n",
-    "\n",
-    "    ax.plot_surface(T, K, data_grid, edgecolor = \"royalblue\", rstride=1, cstride=1, antialiased=True, alpha = 0.225, lw = 0.1)\n",
-    "    ax.set_ylim(-0.2,1.2)\n",
-    "    ax.contour(T, K, data_grid, zdir='y', offset=1.2, cmap='coolwarm')\n",
-    "    ax.set_xlabel('Tiempo (u.a.)', fontsize=12, labelpad=10)\n",
-    "    ax.set_ylabel('Parámetro $\\\\kappa$', fontsize=12, labelpad=10)\n",
-    "    ax.set_zlabel('Valor Esperado', fontsize=12, labelpad=15)\n",
-    "    ax.set_title(f'Evolución del Observable: {name}', fontsize=16)\n",
-    "    \n",
-    "    base_filename = f\"3D_Observable_\"\n",
-    "\n",
-    "    save_figure_with_timestamp(base_filename, POTENTIAL_TYPE, COUPLING_TYPE, bbox_inches = 'tight', pad_inches = 1)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "88c84bb0",
    "metadata": {},
    "outputs": [],
@@ -816,7 +722,7 @@
     "surf = ax_3d.plot_surface(T, K, entanglement_measure, cmap=cm.viridis, rstride=1, cstride=1, antialiased=True, edgecolors=(0, 0, 0, 0.1), lw = 0.1)\n",
     "ax_3d.set_xlabel('Tiempo (u.a.)', labelpad = 10); ax_3d.set_ylabel('Parámetro $\\\\kappa$', labelpad = 10)\n",
     "ax_3d.set_zlabel('Entrelazamiento ($1 - \\\\mathrm{Tr}(\\\\rho_C^2)$)', labelpad = 10)\n",
-    "ax_3d.set_title(f'Evolución del Entrelazamiento Clásico-Cuántico ($\\\\varepsilon={epsilon_ent_3d}$)')\n",
+    "ax_3d.set_title(f'Evolución del Entrelazamiento Mixto ($\\\\varepsilon={epsilon_ent_3d}$)')\n",
     "fig_3d.colorbar(surf, shrink=0.5, aspect=10, pad=0.1)\n",
     "save_figure_with_timestamp(\"classical_purity_vs_kappa\", POTENTIAL_TYPE, COUPLING_TYPE, bbox_inches='tight')\n",
     "plt.show()"
@@ -856,9 +762,9 @@
     "# Graficar\n",
     "fig_purity, ax_purity = plt.subplots(figsize=(10, 7))\n",
     "ax_purity.plot(kappa_values_purity, purity_q_vs_kappa, 'o-')\n",
-    "ax_purity.set_title(f'Entrelazamiento cuántico $1 -$ Tr($\\\\rho_Q^2$) en $t={time_to_measure}$ en función de $\\\\kappa$', pad = 10)\n",
+    "ax_purity.set_title(f'Entrelazamiento Cuántico $1 -$ Tr($\\\\rho_Q^2$) en $t={time_to_measure}$ en función de $\\\\kappa$', pad = 10)\n",
     "ax_purity.set_xlabel('$\\\\kappa$')\n",
-    "ax_purity.set_ylabel('Entrelazamiento ($1 - \\\\mathrm{Tr}(\\\\rho_C^2)$)')\n",
+    "ax_purity.set_ylabel('Entrelazamiento ($1 - \\\\mathrm{Tr}(\\\\rho_Q^2)$)')\n",
     "ax_purity.set_xscale('log')\n",
     "ax_purity.invert_xaxis()\n",
     "add_grid(ax_purity)\n",
